--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,21 @@ main{
 .rating span{
     margin:0.1rem
 }
+.cartcard{
+    top:3rem
+}
+.book_name{
+    font-size: 1.5rem;
+}
+.price{
+    font-size: 1rem;
+}
+h2{
+    font-weight: bold;
+}
+img.card-img{
+    max-height: 339px;
+}
+a.username{
+    padding-left:2rem
+}
